package me.study.designpattern.iterator.q1;

public interface Aggregate {
    Iterator iterator();
}
