package me.study.designpattern.iterator.q1;

public interface Iterator {
    boolean hasNext();
    Object next();
}
