@startuml

interface Aggregate {
    +{abstract} iterator()
}
class ConcreteAggregate {
    +iterator()
}
interface Iterator {
    +{abstract} hasNext()
    +{abstract} next()
}
class ConcreteIterator {
    -aggregate
    +hasNext()
    +next()
}

Aggregate <|..ConcreteAggregate
Iterator <|..ConcreteIterator
Aggregate -> Iterator : Creates >
ConcreteAggregate <-o ConcreteIterator

@enduml